[gd_scene load_steps=9 format=3 uid="uid://0j7cg004rnsx"]

[ext_resource type="Script" uid="uid://bgf6pragq0opb" path="res://assets/scripts/player.gd" id="1_egv2f"]
[ext_resource type="Texture2D" uid="uid://csowsl7yud1ef" path="res://assets/sprites/LILDYLan.png" id="2_egv2f"]
[ext_resource type="Texture2D" uid="uid://djwhjax1i04ji" path="res://assets/things/ACTUALCROUCH.png" id="3_1ef3n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r07lq"]
atlas = ExtResource("3_1ef3n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ef3n"]
atlas = ExtResource("2_egv2f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r07lq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r07lq")
}],
"loop": true,
"name": &"CrouchShape",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ef3n")
}],
"loop": true,
"name": &"NormalShape",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ef3n"]
radius = 4.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_egv2f"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(-1, 0)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_egv2f")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="NormalSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.496002, -1)
scale = Vector2(0.969, 1)
sprite_frames = SubResource("SpriteFrames_r07lq")
animation = &"CrouchShape"
metadata/_edit_lock_ = true

[node name="CrouchShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_1ef3n")
disabled = true

[node name="NormalShape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_egv2f")
metadata/_edit_lock_ = true

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="dash_again_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Heart_loss_timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="dash_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
[connection signal="timeout" from="Heart_loss_timer" to="." method="_on_heart_loss_timer_timeout"]
